Adding answer post creation [Issue: #163]

--- a/forum/templates/post/post_list.html
+++ b/forum/templates/post/post_list.html
@@ -36,8 +36,10 @@
                     <p class="comment-text">{{ post.message|linebreaks }}</p>
                 </div>
                 <div class="answer_post"></div>
+                <div class="answer_list">
+                    {% list_post_answer request post %}
+                </div>
             </div>
         </div>
-        {% list_post_answer request post %}
     {% endfor %}
 {% endif %}
