--- a/forum/templates/post_answers/post_answer_form.html
+++ b/forum/templates/post_answers/post_answer_form.html
@@ -1,36 +1,39 @@
 {% load static i18n %}
 {% load widget_tweaks %}
 
-<form method="post" action="#" enctype="multipart/form-data">
+<form class="answer_post_form" method="post" action="{% if answer %}{% else %}{% url 'course:forum:reply_post' %}{% endif %}" enctype="multipart/form-data">
 	{% csrf_token %}
 	{% for field in form %}
-		<div class="form-group {% if form.has_error %} has-error {% endif %} is-fileinput">
-			<div class="input-group">
-				<label for="{{ field.auto_id }}">{{ field.label }}</label>
-				{% render_field field class='form-control' %}
-				<span class="help-block">{{ field.help_text }}</span>
-				{% if field.errors %}
-					<div class="row">
-						<br />
-						<div class="alert alert-danger alert-dismissible" role="alert">
-		  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-		  						<span aria-hidden="true">&times;</span>
-	  						</button>
-							<ul>
-								{% for error in field.errors %}
-									<li>{{ error }}</li>
-								{% endfor %}
-							</ul>
+		{% if field.field.widget.input_type == 'hidden' %}
+            {% render_field field class='form-control' %}
+        {% else %}
+			<div class="form-group {% if form.has_error %} has-error {% endif %} is-fileinput">
+				<div class="input-group">
+					<label for="{{ field.auto_id }}">{{ field.label }}</label>
+					{% render_field field class='form-control' %}
+					<span class="help-block">{{ field.help_text }}</span>
+					{% if field.errors %}
+						<div class="row">
+							<br />
+							<div class="alert alert-danger alert-dismissible" role="alert">
+			  					<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+			  						<span aria-hidden="true">&times;</span>
+		  						</button>
+								<ul>
+									{% for error in field.errors %}
+										<li>{{ error }}</li>
+									{% endfor %}
+								</ul>
+							</div>
 						</div>
-					</div>
-				{% endif %}
-				<span class="input-group-btn">
-			        <button type="submit" class="btn btn-fab btn-fab-mini">
-			            <i class="material-icons">send</i>
-			        </button>
-			    </span>
+					{% endif %}
+					<span class="input-group-btn">
+				        <button type="submit" class="btn btn-fab btn-fab-mini">
+				            <i class="material-icons">send</i>
+				        </button>
+				    </span>
+				</div>
 			</div>
-		</div>
+		{% endif %}
 	{% endfor %}
-
 </form>
