--- a/forum/templates/post_answers/post_answer_list.html
+++ b/forum/templates/post_answers/post_answer_list.html
@@ -2,7 +2,7 @@
 
 {% if answers|length > 0 %}
     {% for answer in answers %}
-        <div id="answer_{{ answer_id }}" class="row" style="background-color: #e0e0e0">
+        <div id="answer_{{ answer.id }}" class="row" style="background-color: #e0e0e0">
             <div class="col-sm-12 col-xs-12">
                 <h3 class="user-name">
                     {{ answer.user }}
@@ -14,7 +14,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                                     <li><a href="javascript:void(0)"><i class="material-icons">create</i> {% trans 'Edit' %}</a></li>
-                                    <li><a href="javascript:void(0)"><i class="material-icons">delete_sweep</i> {% trans 'Remove' %}</a></li>
+                                    <li><a href="javascript:delete_answer('{% url 'course:forum:delete_answer' answer.id %}', '{{ answer.id }}', '{% trans "Are you sure you want to delete this answer?" %}')"><i class="material-icons">delete_sweep</i> {% trans 'Remove' %}</a></li>
                                 </ul>
                             </div>
                         </div>
