--- a/courses/templates/subject/form_view_student.html
+++ b/courses/templates/subject/form_view_student.html
@@ -1,4 +1,4 @@
-{% load i18n %}
+{% load static i18n list_topic_foruns %}
 
 {% block javascript %}
     <script type="text/javascript" src="{% static 'js/forum.js' %}"></script>
