--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -27,6 +27,17 @@
 {% endblock %}
 
 {% block content %}
+	{% if messages %}
+		{% for message in messages %}
+			<div class="alert alert-success alert-dismissible" role="alert">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+				<p>{{ message }}</p>
+			</div>
+		{% endfor %}
+	{% endif %}
+	
 	<div class="row">
 		<div class="col-lg-offset-4 col-lg-2">
 			<img src="" class="img-responsive center-block " alt="logo amadeus">
