--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -11,8 +11,22 @@
                 <div class="col-md-9 col-sm-9">
                     <h3>{{ topic }}</h3>
                 </div>
-                <div class="col-md-3 col-sm-3">
-                    <a href="{% url 'course:update_topic' topic.slug%}" class="btn">{% trans "edit" %}</a>
+              <div class="col-xs-4 col-md-3 divMoreActions">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-default btn-sm eye" data-toggle="tooltip" data-placement="bottom" title="Visible">
+                        <i class="fa fa-eye fa-2x" aria-hidden="true"></i>
+                      </button>
+                    </div>
+                    <div class="btn-group">
+                      <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
+                      </button>
+                      <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
+                        <li><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal4"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Replicate" %}</a></li>
+                        <li><a href="{% url 'course:update_subject' subject.slug %}" data-toggle="modal" data-target="#editSubject"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a></li>
+                        <li><a href="{% url 'course:delete_subject' subject.slug %}" data-toggle="modal" data-target="#removeSubject"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Remove" %}</a></li>
+                      </ul>
+                    </div>
                 </div>
             </div>
         </div>
