atualização de urls para remember password #58

--- a/core/templates/registration/passwor_reset_email.html
+++ b/core/templates/registration/passwor_reset_email.html
@@ -2,7 +2,7 @@ To initiate the password reset process for your {{ user.get_username }} TestSite
 click the link below:
 
 {% block reset_link %}
-{{ protocol }}://{{ domain }}{% url 'core:passwor_reset_confirm' uidb36=uid token=token %}
+{{ protocol }}://{{ domain }}{% url 'core:password_reset_confirm' uidb64=uid token=token %}
 
 {% endblock %}
 
