--- a/poll/templates/poll/view.html
+++ b/poll/templates/poll/view.html
@@ -1,99 +1,25 @@
-{% extends "topic/index.html" %}
+{% extends "poll/create.html" %}
 
-{% load i18n widget_tweaks dict_access static%}
-{% block content %}
-<!-- Modal (remember to change the ids!!!) -->
-<div class="modal fade" id="poll" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
+{% load i18n dict_access static%}
 
-      <!-- Modal Header -->
-      <div class="modal-header">
+{% block style %}
+{% endblock %}
 
-        <!-- Put your title here!!!  -->
-        <h4 class="modal-title" id="myModalLabel">{{form.question}}</h4>
+{% block title_poll %}
+<!-- Put your title here!!!  -->
+<h4 class="modal-title" id="myModalLabel">{{poll}}</h4>
+{% endblock title_poll %}
 
-      </div>
-      <!-- Modal Body -->
-      <div class="modal-body">
-
-        <!-- Put ONLY your content here!!!  -->
-          <div class="conteiner">
-                </div>
-                  <form id="form" method="post">
-                    {% csrf_token %}
-                    {% for key in keys %}
-                    <div class="row form-group">
-                      <div class="col-md-1">
-                        </br>
-                        <label><span class="glyphicon glyphicon-move"></span></label>
-                      </div>
-                      <div class="col-md-10">
-                        <div class="has-success is-empty">
-                          <input type="text" name="{{key}}" class="form-control" placeholder='{% trans "Answer" %}' value="{{ answers|value:key }}">
-                          <span class="help-block">{% trans "Possible answer for the question" %}</span>
-                        </div>
-                      </div>
-                      <div class="col-md-1">
-                        </br>
-                        <label><span class="glyphicon glyphicon-remove" onclick="this.parentNode.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode.parentNode);"></span></label>
-                      </div>
-                    </div>
-                    {% empty %}
-                    <div class="row form-group">
-                      <div class="col-md-1">
-                        </br>
-                        <label><span class="glyphicon glyphicon-move"></span></label>
-                      </div>
-                      <div class="col-md-10">
-                        <div class="has-success is-empty">
-                          <input type="text" name="1" class="form-control" placeholder='{% trans "Answer" %}'>
-                          <span class="help-block">{% trans "Possible answer for the question" %}</span>
-                        </div>
-                      </div>
-                      <div class="col-md-1">
-                        </br>
-                        <label><span class="glyphicon glyphicon-remove" onclick="this.parentNode.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode.parentNode);"></span></label>
-                      </div>
-                    </div>
-                    {% endfor %}
-                  </form>
-                  </br>
-                </div>
-              <button type="button" id="add" class="btn btn-primary btn-block btn-sm">add</button>
-        <div class="row form-group">
-          <input form="form" class="form-control" type="date" name="{{form.limit_date.name}}" {% if form.limit_date.value != None %}value="{% if form.limit_date.value.year %}{{form.limit_date.value|date:'Y-m-d'}}{% else %}{{form.limit_date.value}}{% endif %}"{% endif %}>
-          {% if form.limit_date.errors %}
-          <div class="not_submited">
-          </br>
-              <div class="alert alert-danger alert-dismissible" role="alert">
-                  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                <ul>
-                  {% for error in form.limit_date.errors %}
-                    <li>{{ error }}</li>
-                  {% endfor %}
-                </ul>
-              </div>
-          </div>
-          {% endif %}
-        </div>
-
-      </div>
-
-      <!-- Modal Footer -->
-      <div class="modal-footer">
-
-        <!-- Don't remove that!!!  -->
-        <button type="button" class="btn btn-danger btn-raised" data-dismiss="modal">{% trans "Close" %}</button>
-
-        <!-- Put curtom buttons here!!!  -->
-        <button type="submite" id="button" form="form" class="btn btn-primary btn-raised">{% trans "Create" %}</button>
-      </div>
-
-    </div>
+{% block content_poll %}
+<!-- Put ONLY your content here!!!  -->
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <h3>{% trans "Limit date:" %} {{poll.limit_date|date:'d/m/y'}}</h3>
   </div>
 </div>
-<a href="" data-toggle="modal" data-target="#poll">modal</a>
-{% endblock content %}
+{% endblock content_poll %}
+
+{% block button_save %}
+<!-- Put curtom buttons here!!!  -->
+<button type="submite" id="button" form="form" class="btn btn-primary btn-raised">{% trans "Answer" %}</button>
+{% endblock button_save %}
