--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -63,6 +63,20 @@
 	    </span>
 	</div>
 </div>
+	<div class="col-md-12">
+		{% if user|has_role:'professor, system_admin' %}
+		{% else%}
+			
+			<div class="btn-group btn-group-justified btn-group-raised">
+				<a href="?category=all" class="btn btn-raised btn-info">Todos</a>
+				{% for category_course in categorys_courses %}
+					<a href="?category={{category_course.name}}" class="btn btn-raised btn-primary">{{category_course.name}}</a>
+				{% endfor %}
+			</div>
+		{% endif %}
+	</div>
+
+</fieldset>
 {% if user|has_role:'professor, system_admin' %}
 	<div class="col-md-12">
 		{% if courses|length > 0 %}
@@ -141,55 +155,107 @@
 		</div>
 {% else %}
 	{% if courses|length > 0 %}
-		{% for course in courses_student %}
-			<div class="col-md-12">
-			    <div class="panel panel-info">
-			    <!--{% if course.image %}
-	  				<img src="{{ course.image_url }}" class="img-responsive" />
-	            {% else %}
-	            	<img src="" class="img-responsive" />
-	            {% endif %} -->
-				  <div class="panel-heading">
-					  <div class="row">
-					  	<div class="col-md-9">
-				  			<h3 class="panel-title">{{course.name}}</h3>
-				  		</div>
-				  		<div class="col-md-3">
-				  			<span class="label label-info">{{ course.category }}</span>
-							<span class="label label-warning">{{ course.max_students }} {% trans 'students tops' %}</span>
-				  		</div>
+		{% if request.GET.category == 'all' or none %}
+			{% for course in courses_student %}
+				<div class="col-md-12">
+				    <div class="panel panel-info">
+				    <!--{% if course.image %}
+		  				<img src="{{ course.image_url }}" class="img-responsive" />
+		            {% else %}
+		            	<img src="" class="img-responsive" />
+		            {% endif %} -->
+					  <div class="panel-heading">
+						  <div class="row">
+						  	<div class="col-md-9">
+					  			<h3 class="panel-title">{{course.name}}</h3>
+					  		</div>
+					  		<div class="col-md-3">
+					  			<span class="label label-info">{{ course.category }}</span>
+								<span class="label label-warning">{{ course.max_students }} {% trans 'students tops' %}</span>
+					  		</div>
+						  </div>
+					  </div>     
+					  <div class="panel-body">
+					    <p><b>Course Name: </b>{{ course.name }}</p>
+					    <p><b>Duration (in semesters): </b>09</p>
+					    <p><b>Coordinator: </b>{{course.professors}}</p>
+					    <p>
+					      <b>Description:</b>
+					      <i>
+					      {% if couse.description %}
+					        {{course.description|linebreaks}}
+					      {% else %}
+					      	{% trans 'No description' %}
+					      {% endif %}
+					      </i>
+					    </p>
+
+					    <!--{% if user|has_role:'professor, system_admin' %}
+							<a href="{% url 'course:update' course.slug %}" class="btn btn-sm btn-primary">
+								<span class="glyphicon glyphicon-edit"></span>
+							</a>
+							<a href="{% url 'course:delete' course.slug %}" class="btn btn-sm btn-danger">
+								<span class="glyphicon glyphicon-trash"></span>
+							</a>
+						{% endif %}-->
+
+					    <a href="{% url 'course:view' course.slug %}" class="btn btn-raised btn-default center-block">View Course</a>
 					  </div>
-				  </div>     
-				  <div class="panel-body">
-				    <p><b>Course Name: </b>{{ course.name }}</p>
-				    <p><b>Duration (in semesters): </b>09</p>
-				    <p><b>Coordinator: </b>{{course.professors}}</p>
-				    <p>
-				      <b>Description:</b>
-				      <i>
-				      {% if couse.description %}
-				        {{course.description|linebreaks}}
-				      {% else %}
-				      	{% trans 'No description' %}
-				      {% endif %}
-				      </i>
-				    </p>
+					</div>            
+	    		</div>
+    		{% endfor %}
+    	{% else %}
+    		{% for course in courses_student %}
+    			{% if course.category.name == request.GET.category %}
+    				<div class="col-md-12">
+					    <div class="panel panel-info">
+					    <!--{% if course.image %}
+			  				<img src="{{ course.image_url }}" class="img-responsive" />
+			            {% else %}
+			            	<img src="" class="img-responsive" />
+			            {% endif %} -->
+						  <div class="panel-heading">
+							  <div class="row">
+							  	<div class="col-md-9">
+						  			<h3 class="panel-title">{{course.name}}</h3>
+						  		</div>
+						  		<div class="col-md-3">
+						  			<span class="label label-info">{{ course.category }}</span>
+									<span class="label label-warning">{{ course.max_students }} {% trans 'students tops' %}</span>
+						  		</div>
+							  </div>
+						  </div>     
+						  <div class="panel-body">
+						    <p><b>Course Name: </b>{{ course.name }}</p>
+						    <p><b>Duration (in semesters): </b>09</p>
+						    <p><b>Coordinator: </b>{{course.professors}}</p>
+						    <p>
+						      <b>Description:</b>
+						      <i>
+						      {% if couse.description %}
+						        {{course.description|linebreaks}}
+						      {% else %}
+						      	{% trans 'No description' %}
+						      {% endif %}
+						      </i>
+						    </p>
 
-				    <!--{% if user|has_role:'professor, system_admin' %}
-						<a href="{% url 'course:update' course.slug %}" class="btn btn-sm btn-primary">
-							<span class="glyphicon glyphicon-edit"></span>
-						</a>
-						<a href="{% url 'course:delete' course.slug %}" class="btn btn-sm btn-danger">
-							<span class="glyphicon glyphicon-trash"></span>
-						</a>
-					{% endif %}-->
+						    <!--{% if user|has_role:'professor, system_admin' %}
+								<a href="{% url 'course:update' course.slug %}" class="btn btn-sm btn-primary">
+									<span class="glyphicon glyphicon-edit"></span>
+								</a>
+								<a href="{% url 'course:delete' course.slug %}" class="btn btn-sm btn-danger">
+									<span class="glyphicon glyphicon-trash"></span>
+								</a>
+							{% endif %}-->
 
-				    <a href="{% url 'course:view' course.slug %}" class="btn btn-raised btn-default center-block">View Course</a>
-				  </div>
-				</div>            
-    		</div>
-
-    	{% endfor %}
+						    <a href="{% url 'course:view' course.slug %}" class="btn btn-raised btn-default center-block">View Course</a>
+						  </div>
+						</div>            
+	    			</div>
+				{% endif %}
+    		{% endfor %}
+    	{% endif %}
 
     	<nav aria-label="Page navigation">
   			<ul class="pagination">
