created course's category #142

--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -33,6 +33,7 @@
 	        <ul class="nav nav-pills nav-stacked">
 	            <li><a href="javascript:void(0)">Replicate Course</a></li>
 	            <li><a href="{% url 'course:create' %}">Create Course</a></li>
+	            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
 	        </ul>
 	    </div>
 	</div>
