--- a/courses/templates/category/create.html
+++ b/courses/templates/category/create.html
@@ -1,6 +1,6 @@
 {% extends 'app/base.html' %}
 
-{% load static i18n %}
+{% load static i18n permission_tags %}
 {% load widget_tweaks %}
 
 {% block breadcrumbs %}
@@ -11,20 +11,37 @@
 {% endblock %}
 
 {% block sidebar %}
-	<div class="list-group">
-	  	<a href="{% url 'course:manage_cat' %}" class="list-group-item">
-	    	{% trans 'Categories' %}
-	  	</a>
+	<div class="panel panel-primary navigation">
+        <div class="panel-heading">
+            <h5>{% trans 'Menu' %}</h5>
+        </div>
+        <div class="panel-body">
+            <ul class="nav nav-pills nav-stacked">
+                <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
+                <li><a href="{% url 'course:manage' %}">{% trans 'My Courses' %}</a></li>
+            </ul>
+        </div>
+    </div>
+
+{% if user|has_role:'professor, system_admin' %}
+
+    <div class="panel panel-primary navigation">
+	    <div class="panel-heading">
+	        <h3 class="panel-title">Actions</h3>
+	    </div>
+	    <div class="panel-body">
+	        <ul class="nav nav-pills nav-stacked">
+	            <li><a href="javascript:void(0)">Replicate Course</a></li>
+	            <li><a href="{% url 'course:create' %}">Create Course</a></li>
+	            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
+	        </ul>
+	    </div>
 	</div>
+{% endif %}
+
 {% endblock %}
 
 {% block content %}
-	<div class="alert alert-info alert-dismissible" role="alert">
-		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-			<span aria-hidden="true">&times;</span>
-		</button>
-		<p>{% trans 'All fields are required' %}</p>
-	</div>
 
 	<form method="post" action="">
 		{% csrf_token %}
