--- a/core/templates/lembrar_senha.html
+++ b/core/templates/lembrar_senha.html
@@ -45,7 +45,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 	<link href="{% static 'css/amadeus.css' %}" rel="stylesheet" type="text/css" />
 	<link href="{% static 'css/content_management.css' %}" rel="stylesheet" type="text/css" />
 	<link href="{% static 'css/jqueryui/smoothness/jquery-ui-1.7.1.custom.css' %}" rel="stylesheet" type="text/css" />
-	<link href="{% static 'imgs/favicon.ico' %}" rel="shortcut icon" />
+	<link href="{% static 'img/favicon.ico' %}" rel="shortcut icon" />
 
 	<script type='text/javascript' src='dwr/interface/UtilDWR.js'></script>
 	<script type='text/javascript' src='dwr/engine.js'></script>
