--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -7,7 +7,7 @@
 	<title>{{ title }}</title>
 
 	<meta http-equiv="Cache-Control" content="no-cache, no-store" />
-	<link href="{% static 'img/favicon.ico' %}" rel="shortcut icon" />
+	<!--<link href="{% static 'img/favicon.ico' %}" rel="shortcut icon" />-->
 	
 	<!-- Roboto font -->
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
