--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -1,4 +1,4 @@
-{% load static i18n list_topic_foruns %}
+{% load static i18n list_topic_foruns%}
 
 {% block javascript %}
     <script type="text/javascript" src="{% static 'js/forum.js' %}"></script>
@@ -54,6 +54,7 @@
             <ul>
                 <li><i class="material-icons">description</i> <a href="#" data-toggle="modal" data-target="#ActivityModal">Activitie 1</a></li>
                 <li><i class="material-icons">list</i> <a href="#" data-toggle="modal" data-target="#forumModal">Forum</a></li>
+                {% list_topic_poll request topic %}
             </ul>
 
 
@@ -426,7 +427,7 @@
       </div>
       <div class="modal-body">
         <form class="form-horizontal">
-          
+
       <fieldset>
         <legend>Atividade Proposta</legend>
         <div class="form-group is-empty">
