--- a/poll/templates/poll/create.html
+++ b/poll/templates/poll/create.html
@@ -1,12 +1,14 @@
-{% extends "topic/index.html" %}
+{# {% extends "topic/index.html" %} #}
 
 {% load i18n widget_tweaks dict_access static%}
 
-{% block style %}
+{# {% block style %} #}
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-{% endblock %}
+  <script src="{% static 'js/modal_poll.js' %}"></script>
 
-{% block content %}
+{# {% endblock %} #}
+
+{# {% block content %} #}
 <!-- Modal (remember to change the ids!!!) -->
 <div class="modal fade" id="poll" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
@@ -56,7 +58,7 @@
                   <form id="form" class="" action="" method="post">
                     {% csrf_token %}
                     {% for key in keys %}
-                    <div class="row form-group">
+                    <div class="row form-group {% if form.has_error %} has-error {% endif %}">
                       <div class="col-md-1">
                         </br>
                         <label><span class="glyphicon glyphicon-move"></span></label>
@@ -73,7 +75,7 @@
                       </div>
                     </div>
                     {% empty %}
-                    <div class="row form-group">
+                    <div class="row form-group {% if form.has_error %} has-error {% endif %}">
                       <div class="col-md-1">
                         </br>
                         <label><span class="glyphicon glyphicon-move"></span></label>
@@ -94,10 +96,10 @@
                   </br>
                 </div>
               <button type="button" id="add" class="btn btn-primary btn-block btn-sm">add</button>
-        <div class="row form-group">
+        <div class="row form-group {% if form.has_error %} has-error {% endif %}">
           <label for="{{ form.limit_date.auto_id }}">{{ form.limit_date.label }}</label>
-          {% render_field  form.limit_date class="form-control" form="form"%}
-          {# <input form="form" class="form-control" type="date" name="{{form.limit_date.name}}" {% if form.limit_date.value != None %}value="{% if form.limit_date.value.year %}{{form.limit_date.value|date:'Y-m-d'}}{% else %}{{form.limit_date.value}}{% endif %}"{% endif %}>#}
+          {# {% render_field  form.limit_date class="form-control" form="form"%} #}
+          <input form="form" class="form-control" type="date" name="{{form.limit_date.name}}" {% if form.limit_date.value != None %}value="{% if form.limit_date.value.year %}{{form.limit_date.value|date:'Y-m-d'}}{% else %}{{form.limit_date.value}}{% endif %}"{% endif %}>
           {% if form.limit_date.errors %}
           <div class="not_submited">
           </br>
@@ -115,11 +117,11 @@
           {% endif %}
         </div>
 
-        <div class="row form-group">
+        <div class="row form-group {% if form.has_error %} has-error {% endif %}">
             <label for="{{ form.students.auto_id }}">{{ form.students.label }}</label>
             {% render_field  form.students class="form-control" form="form"%}
         </div>
-        <div class="row form-group">
+        <div class="row form-group {% if form.has_error %} has-error {% endif %}">
           <div class="checkbox">
             <label>
               {% render_field form.all_students class="form-control" form="form" %}<span class="checkbox-material"><span class="check"></span></span> {{form.all_students.label }}
@@ -159,48 +161,21 @@
     </div>
   </div>
 </div>
-<script type="text/javascript">
-// Este js tem que ficar aqui se não a tag "trans" não vai funcionar
-$(window).ready(function() { // utilizado para abrir o modal quando tiver tido algum erro no preenchimento do formulario
-  if($('.not_submited').length){
-      $('#poll').modal('show');
-      }
-});
-$( "#form" ).sortable({ // utilizado para fazer a re-organização das respostas
-    delay: 100,
-    distance: 5,
-    update: function( event, ui ) {
-      var cont = 1;
-      $("#form div div div input").each(function(){
-              $(this).attr('name',cont++);
-      });
-    },
-});
-name = 2;
-$("#add").click(function() { // utilizado para adicionar um novo campo de resposta
-  //Obs: não funcionar se estiver importado no head, só funciona se estiver no final do arquivo
-  $("#form").append('\
-  <div class="row form-group">\
-    <div class="col-md-1">\
-      </br>\
-      <label><span class="glyphicon glyphicon-move"></span></label>\
-    </div>\
-    <div class="col-md-10">\
-      <div class="has-success is-empty">\
-        <input type="text" name="1" class="form-control" placeholder="{% trans "Answer" %}">\
-        <span class="help-block">{% trans "Possible answer for the question" %}</span>\
-      </div>\
-    </div>\
-    <div class="col-md-1">\
-      </br>\
-      <label><span class="glyphicon glyphicon-remove" onclick="this.parentNode.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode.parentNode);"></span></label>\
-    </div>\
-  </div>');
-  var cont = 1;
-  $("#form div div div input").each(function(){
-          $(this).attr('name',cont++);
-  });
-});
+<script src="{% static 'js/sortable_poll.js' %}">
+// Este js tem que ficar aqui se não o sortable não vai funcionar
 </script>
-<a href="" data-toggle="modal" data-target="#poll">modal</a>
-{% endblock content %}
+{% block script_poll %}
+<script type="text/javascript">
+// Este js tem que ficar aqui se não o button add não vai funcionar
+  $("#add").click(function (){
+    Answer.init('{% url "course:poll:answer_poll" %}');
+  });
+
+  $("#form").submit(function(event) {
+    Submite.post("{% url 'course:poll:create_poll' topic.slug %}",$(this).serialize());
+    event.preventDefault();
+  });
+</script>
+{% endblock script_poll %}
+{# <a href="" data-toggle="modal" data-target="#poll">modal</a> #}
+{# {% endblock content %} #}
